--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 DJANGO_SECRET_KEY=django-insecure-example
-DEBUG=True
+DEBUG=False
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 techstore
 DATABASE_NAME=example_db
 DATABASE_USERNAME=example_db
